<resources>
    <string name="app_name">AnimeApp</string>
    <string name="baseUrl">https://myanimelist.net/anime/season</string>
    <string name="update">Update</string>
    <string name="online_mode">Online Mode</string>
    <string name="online_mode_condensed_title">Online</string>
    <string name="refresh">Refresh</string>
    <string name="settings_shared_preferences_file_name">Settings</string>
    <string name="data_mode">dataMode</string>
    <string name="no_network_connection">No Network Connection</string>
    <string name="default_year">defaultYear</string>
    <string name="default_season">defaultSeason</string>
    <string name="user_defined_year">userDefinedYear</string>
    <string name="user_defined_season">userDefinedSeason</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="tvYear_text">Year</string>
    <string name="tvSeason_text">Season</string>
    <string name="settings">Settings</string>
    <string name="btDelete_text">DELETE</string>
    <string name="btDefault_text">Set to Default</string>
    <string name="scroll_amount">scrollAmount</string>
    <string name="down">Down</string>
    <string name="up">Up</string>
    <string name="UP">UP</string>
    <string name="DOWN">DOWN</string>
    <string name="favourites">Favourites</string>
    <string name="unfavourite">Unfavourite</string>
    <string name="Cancel">Cancel</string>
    <string name="indexFileName">indexfile.geb</string>

    <string-array name="seasons">
        <item>Winter</item>
        <item>Spring</item>
        <item>Summer</item>
        <item>Fall</item>
    </string-array>
</resources>
