<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/up"
        android:title="@string/up"
        android:orderInCategory="1"
        app:showAsAction="always"
        app:actionViewClass="android.support.v7.widget.AppCompatButton" />

    <item android:id="@+id/down"
        android:title="@string/down"
        android:orderInCategory="2"
        app:showAsAction="always"
        app:actionViewClass="android.support.v7.widget.AppCompatButton" />


    <item android:id="@+id/refresh"
        android:orderInCategory="100"
        android:title="@string/refresh" />

    <item android:id="@+id/update"
        android:orderInCategory="100"
        android:title="@string/update" />

    <item android:id="@+id/online_mode"
        android:orderInCategory="101"
        android:title="@string/online_mode"
        android:titleCondensed="@string/online_mode_condensed_title"
        android:checkable="true"/>

    <item android:id="@+id/settings"
        android:orderInCategory="102"
        android:title="@string/settings" />


</menu>