<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.jr.poliv.animeapp.SettingsActivity"
    tools:showIn="@layout/activity_settings">



    <Spinner
        android:id="@+id/spYear"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintRight_toLeftOf="@+id/spSeason"
        android:gravity="center"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/spSeason"
        android:layout_marginEnd="10dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/spSeason"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintVertical_bias="1.0" />

    <Spinner
        android:id="@+id/spSeason"
        android:entries="@array/seasons"
        android:gravity="center"
        android:layout_width="175dp"
        android:layout_height="30dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="191dp"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tvYear"
        android:layout_width="0dp"
        android:layout_height="31dp"
        android:gravity="center"
        android:text="@string/tvYear_text"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/spYear"
        android:layout_marginStart="27dp"
        android:layout_marginEnd="27dp"
        app:layout_constraintRight_toRightOf="@+id/spYear"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="20dp"
        app:layout_constraintLeft_toLeftOf="@+id/spYear" />

    <TextView
        android:id="@+id/tvSeason"
        android:layout_width="0dp"
        android:layout_height="31dp"
        android:gravity="center"
        android:text="@string/tvSeason_text"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/spSeason"
        android:layout_marginStart="27dp"
        android:layout_marginEnd="27dp"
        app:layout_constraintRight_toRightOf="@+id/spSeason"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="20dp"
        app:layout_constraintLeft_toLeftOf="@+id/spSeason" />

    <Button
        android:id="@+id/btDelete"
        style="@android:style/Widget.Button"
        android:layout_width="143dp"
        android:layout_height="53dp"
        android:background="#ff4e46"
        android:text="@string/btDelete_text"
        android:textColor="@color/cardview_light_background"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="76dp"
        app:layout_constraintTop_toBottomOf="@+id/spYear"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.502" />

    <Button
        android:id="@+id/btDefault"
        android:layout_width="141dp"
        android:layout_height="52dp"
        android:text="@string/btDefault_text"
        android:layout_marginStart="16dp"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="29dp"
        app:layout_constraintLeft_toLeftOf="parent" />

</android.support.constraint.ConstraintLayout>
